--- a/dfa-minimizer/package.json
+++ b/dfa-minimizer/package.json
@@ -46,7 +46,7 @@
     "devDependencies": {
         "@ava/typescript": "^1.1.1",
         "@istanbuljs/nyc-config-typescript": "^1.0.1",
-        "@types/node": "^14.14.10",
+        "@types/node": "^14.14.11",
         "@typescript-eslint/eslint-plugin": "^4.0.1",
         "@typescript-eslint/parser": "^4.0.1",
         "ava": "^3.12.1",
@@ -65,7 +65,8 @@
         "standard-version": "^9.0.0",
         "ts-node": "^9.0.0",
         "typedoc": "^0.19.0",
-        "typescript": "^4.0.2"
+        "typescript": "^4.1.2",
+        "yarn": "^1.22.10"
     },
     "files": [
         "build/main",
